--- a/projects/MonkVG-Windows/MonkVG.vcxproj
+++ b/projects/MonkVG-Windows/MonkVG.vcxproj
@@ -93,6 +93,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\Direct2D\d2dBatch.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dContext.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dFont.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dImage.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dPaint.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dPath.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\..\src\mkBaseObject.cpp" />
     <ClCompile Include="..\..\src\mkBatch.cpp" />
     <ClCompile Include="..\..\src\mkContext.cpp" />
@@ -103,32 +127,104 @@
     <ClCompile Include="..\..\src\mkParameter.cpp" />
     <ClCompile Include="..\..\src\mkPath.cpp" />
     <ClCompile Include="..\..\src\mkVGU.cpp" />
-    <ClCompile Include="..\..\src\opengl\glBatch.cpp" />
-    <ClCompile Include="..\..\src\opengl\glContext.cpp" />
-    <ClCompile Include="..\..\src\opengl\glFont.cpp" />
-    <ClCompile Include="..\..\src\opengl\glImage.cpp" />
-    <ClCompile Include="..\..\src\opengl\glPaint.cpp" />
-    <ClCompile Include="..\..\src\opengl\glPath.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.cpp" />
-    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.cpp" />
+    <ClCompile Include="..\..\src\opengl\glBatch.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\glContext.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\glFont.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\glImage.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\glPaint.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\glPath.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\Direct2D\d2dBatch.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dContext.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dFont.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dImage.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dPaint.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dPath.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="..\..\src\mkBaseObject.h" />
     <ClInclude Include="..\..\src\mkBatch.h" />
     <ClInclude Include="..\..\src\mkCommon.h" />
@@ -149,17 +245,39 @@
     <ClInclude Include="..\..\src\opengl\glPaint.h" />
     <ClInclude Include="..\..\src\opengl\glPath.h" />
     <ClInclude Include="..\..\src\opengl\glPlatform.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\all_shaders.h" />
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag.h" />
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.frag.h" />
@@ -182,15 +300,33 @@
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.vert.h" />
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.frag.h" />
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESMath.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESPlatform.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.h" />
-    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESMath.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESPlatform.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag" />
