--- a/projects/MonkVG-Windows/MonkVG.vcxproj.filters
+++ b/projects/MonkVG-Windows/MonkVG.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="Source Files\OpenGLES\OpenGLES20\shaders">
       <UniqueIdentifier>{98ff41f6-12ff-407a-9e56-3828e7f729ff}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Direct2D">
+      <UniqueIdentifier>{81b2bde3-c799-4379-ba85-1c0007b7743d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\mkBaseObject.cpp">
@@ -137,6 +140,24 @@
     </ClCompile>
     <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.cpp">
       <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dContext.cpp">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dPath.cpp">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dPaint.cpp">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dBatch.cpp">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dImage.cpp">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Direct2D\d2dFont.cpp">
+      <Filter>Source Files\Direct2D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -325,6 +346,24 @@
     </ClInclude>
     <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert.h">
       <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dContext.h">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dPath.h">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dPaint.h">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dBatch.h">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dImage.h">
+      <Filter>Source Files\Direct2D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Direct2D\d2dFont.h">
+      <Filter>Source Files\Direct2D</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
